--- a/00_Exploration_CropMap.ipynb
+++ b/00_Exploration_CropMap.ipynb
@@ -29,7 +29,10 @@
     "\n",
     "*Description*: This 2016 data shows agriculture, wetland, and urban boundaries. Originally created by Land IQ, many of the California planning agencies use this for their own research and projects.\n",
     "\n",
-    "## Brief Description"
+    "## Brief Description\n",
+    "\n",
+    "\n",
+    "## EEK their download thing is weird"
    ]
   },
   {
