--- a/00_Exploration_FMPP.ipynb
+++ b/00_Exploration_FMPP.ipynb
@@ -25,7 +25,7 @@
    "metadata": {},
    "source": [
     "## About the Data\n",
-    "*Retrieval Link*: [Link]https://gis.conservation.ca.gov/portal/home/item.html?id=16e43ece55474ca4a4f705ab4f64cb98)\n",
+    "*Retrieval Link*: [Link](https://gis.conservation.ca.gov/portal/home/item.html?id=16e43ece55474ca4a4f705ab4f64cb98)\n",
     "\n",
     "*Meta Data Link*: [Link](https://gis.conservation.ca.gov/portal/sharing/rest/content/items/16e43ece55474ca4a4f705ab4f64cb98/info/metadata/metadata.xml?format=default&output=html)\n",
     "\n",
@@ -233,11 +233,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "It seems like unique farmland is most common, followed by statewide important farmland. We need to look into how these farm classes differ."
+   ]
   }
  ],
  "metadata": {
