--- a/00_Exploration_PurpleAir.ipynb
+++ b/00_Exploration_PurpleAir.ipynb
@@ -36,7 +36,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
