--- a/Final_Project_Notebook.ipynb
+++ b/Final_Project_Notebook.ipynb
@@ -356,7 +356,7 @@
     "1. Scatter plot relationship between each feature and our y variable\n",
     "2. One-two summary visualizations for each feature?\n",
     "3. Scatter plot relationship between specific variables\n",
-    "4..."
+    "4. Correlation plot"
    ]
   },
   {
@@ -393,23 +393,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Model 1: K Nearest Neighbors\n",
+    "#### Model 1: K Nearest Neighbors [Michelle]\n",
     "First, we'll try K Nearest Neighbors (KNN) to predict the average air quality measurements for XX timeframe at each of our emitter points. "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "#### [Model 2: Land Use Regression?]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### [Model 3:....]"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -821,7 +812,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Question 3:"
+    "### Question 3: [Subsetting]"
    ]
   },
   {
@@ -860,7 +851,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
