update AVIRIS CH4 extraction script

--- a/01_Extract_AVIRIS_CH4.ipynb
+++ b/01_Extract_AVIRIS_CH4.ipynb
@@ -649,7 +649,7 @@
    "outputs": [],
    "source": [
     "counties = gpd.read_file(os.sep.join([datadir, 'CA_Counties', 'CA_Counties_TIGER2016.shp']))\n",
-    "counties_utm = counties.to_crs(epsg=32611);"
+    "counties_utm = counties.to_crs(epsg=32611)"
    ]
   },
   {
