Text edits for final project notebook

--- a/Final_Project_Notebook.ipynb
+++ b/Final_Project_Notebook.ipynb
@@ -410,7 +410,7 @@
     "### Question 2: Predicting ground-level methane emissions throughout California\n",
     "TO DO: Explanation of approach. Why regression. \n",
     "\n",
-    "<font color='purple'><b>I can write a little blurb for this later if you'd like! I'm assuming we'll mention the papers we read outside of class, and also highlight Novatny.</b></font>"
+    "<font color='purple'><b>With the lack of facility level measurements, air monitor network sensors, and regulation of methane in the United States, it was imperative to develop a model that could predict ground measurements of $CH_4$. Using studies like the Novotony et al. (2011) as a basis, we decided to go about this prediction using OLS, Lasso, and Ridge.</b></font>"
    ]
   },
   {
@@ -1457,7 +1457,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -3714,19 +3713,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Define lasso alpha values\n",
-    "lasso_alphas = ..."
+    "lasso_alphas = np.linspace(0.1,100000,100)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 158,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training MSE:  2.0517149255242138e-09\n",
+      "Test MSE:  1.9027884194795224e-09\n",
+      "Optimal Alpha Value:  100000.0\n"
+     ]
+    }
+   ],
    "source": [
     "#Fit model\n",
     "l_train_mse, l_test_mse, l_alpha = fit_model_cv(LassoCV, \n",
@@ -3757,16 +3766,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 159,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "OLS Test MSE:  4.3825042888119677e-10\n",
+      "Ridge Test MSE:  4.383167223006129e-10\n",
+      "Lasso Test MSE:  1.9027884194795224e-09\n"
+     ]
+    }
+   ],
    "source": [
     "#Print OLS\n",
     "print(\"OLS Test MSE: \", ols_test_mse)\n",
