minor edits to final notebook

--- a/Final_Project_Notebook.ipynb
+++ b/Final_Project_Notebook.ipynb
@@ -3631,7 +3631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3651,19 +3651,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Training MSE:  4.476206551851342e-10\n",
-      "Test MSE:  4.383167223006129e-10\n",
-      "Optimal Alpha Value:  70.71000000000001\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Fit model\n",
     "r_train_mse, r_test_mse, r_alpha = fit_model_cv(RidgeCV, \n",
@@ -3713,29 +3703,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Define lasso alpha values\n",
-    "lasso_alphas = np.linspace(0.1,100000,100)"
+    "lasso_alphas = ..."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Training MSE:  2.0517149255242138e-09\n",
-      "Test MSE:  1.9027884194795224e-09\n",
-      "Optimal Alpha Value:  100000.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Fit model\n",
     "l_train_mse, l_test_mse, l_alpha = fit_model_cv(LassoCV, \n",
@@ -3766,19 +3746,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "OLS Test MSE:  4.3825042888119677e-10\n",
-      "Ridge Test MSE:  4.383167223006129e-10\n",
-      "Lasso Test MSE:  1.9027884194795224e-09\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Print OLS\n",
     "print(\"OLS Test MSE: \", ols_test_mse)\n",
