Minor text edits

--- a/01_Extract_Points_ALL_TROPOMI_EDA.ipynb
+++ b/01_Extract_Points_ALL_TROPOMI_EDA.ipynb
@@ -38,7 +38,64 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`01_Extract_Points_ALL_TROPOMI.py` extracts the data for VISTA points, here we explore the results for the methane rasters."
+    "## Steps prior to this notebook"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- A Google Earth Engine script was used to limit our study area and take monthly averages of the parameter in question. Here's an example of that code:\n",
+    "\n",
+    "```\n",
+    "var table = ee.FeatureCollection(\"users/hmurayama/CA_State_TIGER2016\");\n",
+    "\n",
+    "// Add layer objects\n",
+    "Map.centerObject(table);\n",
+    "Map.setZoom(6);\n",
+    "\n",
+    "var viz = {min:0, max: 0.00005, palette: ['#00abff','#95bd00','e5e700','#cc2900','#a400c3']};\n",
+    "\n",
+    "//Image collection for 2019\n",
+    "var no2_2019 = ee.ImageCollection(\"COPERNICUS/S5P/NRTI/L3_NO2\")\n",
+    "      .filterDate('2019-01-01', '2020-01-01')\n",
+    "      .filterBounds(table)\n",
+    "\n",
+    "var months = ee.List.sequence(1, 12);\n",
+    "\n",
+    "// Group by month, and then reduce within groups by mean();\n",
+    "// the result is an ImageCollection with one image for each\n",
+    "// month.\n",
+    "var byMonth = ee.ImageCollection.fromImages(\n",
+    "      months.map(function (m) {\n",
+    "        return no2_2019.filter(ee.Filter.calendarRange(m, m, 'month'))\n",
+    "                    .select(1).mean()\n",
+    "                    .set('month', m);\n",
+    "}));\n",
+    "print(byMonth.first().projection().nominalScale());\n",
+    "\n",
+    "// Merge all images to be bands for one image\n",
+    "var merged = byMonth.toBands();\n",
+    "\n",
+    "print(merged.projection())\n",
+    "var myScale = no2_2019.first().projection().nominalScale()\n",
+    "print(myScale)\n",
+    "var projection = merged.projection().crs()\n",
+    "print(projection)\n",
+    "\n",
+    "//Save Image\n",
+    "Export.image.toDrive({\n",
+    "  image: merged.clip(table),\n",
+    "  description: 'NO2_2019',\n",
+    "  region: table,\n",
+    "  scale:  myScale.getInfo(),\n",
+    "  crs: projection.getInfo(),\n",
+    "  folder: 'er131_gee',\n",
+    "});\n",
+    "\n",
+    "```\n",
+    "\n",
+    "- `01_Extract_Points_ALL_TROPOMI.py` extracts the data for VISTA points, here we explore the results for the methane rasters."
    ]
   },
   {
@@ -131,6 +188,13 @@
     "ax.set_yticks([])\n",
     "plt.tight_layout()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Since this is so sparse we did not end up using this as a feature but it is still a good example of why our research question to predict methane across California is vital."
    ]
   },
   {
