Airnow exploration text edits

--- a/00_Exploration_AirNow.ipynb
+++ b/00_Exploration_AirNow.ipynb
@@ -234,7 +234,7 @@
    "metadata": {},
    "source": [
     "## Example raw data\n",
-    "We extracted data by location, pinging the API for data for each month. Here is an example of a compiled csv for all data in one month."
+    "We extracted data by location, pinging the API for data for each month (this can also be found in`00_Exploration_AirNow_FULL.py`). Here is an example of a compiled csv for all data in one month."
    ]
   },
   {
